tests/snapshots/parser_error_fixtures/missing_import_except_bracket.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_import_except_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Import Except List

Expected `[` after `except` in import.

  examples/parser_errors/missing_import_except_bracket.flx:1:23
  |
1 | import Foo.Bar except x, y ]
  |                       ^

Hint:
  Import exclusions use `import Module except [Name1, Name2]`.
== stdout ==
<not executed>
